[tool.poetry]
name = "example"
version = "0.1.0"
description = "An example project using mphapi."
authors = ["David Archibald <david@davidarchibald.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
mphapi = { path = "..", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-snapshot = "^0.9.0"
coverage = "^7.10.4"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pyright = { extras = ["nodejs"], version = "^1.1.406" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
